docs(swagger): get users with filtering and pagination
